<resources>
    <string name="app_name">微营养</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="neterro">网络出错啦!</string>
    <string name="account_hint">邮箱/电话号码</string>
    <string name="password">密码</string>
    <string name="input_password">请输入密码</string>
    <string name="one_more_input_password">请再次输入密码</string>
    <string name="password_notice_null">密码不能为空</string>
    <string name="password_notice_o">密码最好6位以上</string>
    <string name="password_notice_t">请输入正确密码</string>
    <string name="phone_notice_">请输入正确的手机号码</string>
    <string name="login">登陆</string>
    <string name="saoyy">扫营养</string>
    <string name="yaoyy">YAO营养</string>
    <string name="find">发现</string>
    <string name="me">我的</string>
    <string name="denglu">登录</string>
    <string name="sao">扫描</string>
    <string name="help">帮助</string>
    <string name="back">返回</string>
    <string name="lookdetails">查看详情</string>
    <string name="resao">重新扫描</string>
    <string name="dianshare">点击分享</string>
    <string name="wei_team">微团队</string>
    <string name="feedback">意见反馈</string>
    <string name="submit">提交</string>
    <string name="update">版本更新</string>
    <string name="check_update">检查更新</string>
    <string name="company">北京微数据科技有限公司</string>
    <string name="yao_com">营养出品@yao.com</string>
    <string name="healthpass">健康轴</string>
    <string name="first">初次体验</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="login_sure">确认登陆</string>
    <string name="login_frist">初次登陆</string>
    <string name="clear_cache_success">清空成功</string>
    <string name="is_alreadly_version">已是最新</string>
    <string name="feed_back_success">反馈成功</string>
    <string name="feed_back_fail">反馈失败</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="gl_choose_title">请选择图片</string>
    <string name="prompt">    尊敬的用户您好，初次体验该服务可能会遇到速度较慢，请您保持多次使用后会有更好的体验效果，健康饮食生活从此刻开始！</string>
    <string name="yinshihelijilu">饮食合理记录</string>
    <string name="yundongreliangjilu">运动热量记录</string>
    <string name="zhifangsherujilu">脂肪摄入记录</string>
    <string name="tanglleisherujilu">糖类摄入记录</string>
    <string name="danbaizhisherujilu">蛋白质摄入记录</string>
    <string name="vsehgnlusherujilu">维生素摄入记录</string>
    <string name="kuangwuzhisherujilu">矿物质摄入记录 </string>
    <string name="title_activity_bing_chat">BingChat</string>
    <string name="chattitle">趋势图</string>
    <string name="yingyangfenxiang">营养记录</string>
    <string name="userwz">完善资料</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="finsh_toast">再按一次退出微营养</string>
    <string name="changebg">更换背景</string>
    <string name="showtwocode">查看二维码</string>
    <string name="canel">取消</string>
    <string name="delete">删除</string>
    <string name="information">详情</string>
    <string name="delicousfoodyingyang">美食营养</string>
    <string name="fabuzhe">发布者</string>
    <string name="tags">标签</string>
    <string name="tags_">标签:</string>
    <string name="pingjiayixia">评价一下</string>
    <string name="mancenter">管理中心</string>
    <string name="aboutversion">关于版本</string>
    <string name="versioninfo">版本信息</string>
    <string name="commfeedback">意见反馈</string>
    <string name="clearcoach">清空缓存</string>
    <string name="loginout">注销当前账号</string>
    <string name="logining">登录中&#8230;</string>
    <string name="regeit">注册</string>
    <string name="regeiting">注册中&#8230;</string>
    <string name="regeit_success">注册成功</string>
    <string name="regeit_failure">注册失败</string>
    <string name="phone_input_hint">请输入手机号</string>
    <string name="baidu_api_key">mcGXuNClGvdQamQ7fHdaIouX</string>
    <string name="comment_success">评论成功,并获得10个营养币</string>
    <string name="comment_success_">评论成功</string>
    <string name="comment_faliure">评论失败!</string>
    <string name="lie_food_tag">龙虾</string>
    <string name="distance_km">1.1km</string>
    <string name="energy">热量</string>
    <string name="taste">口味</string>
    <string name="one"> 1</string>
    <string name="most_lenght">99+</string>
    <string name="edittag">填写身体状况标签</string>
    <string name="app_tow_code">微营养客户端</string>
    <string name="show_code_str">扫描即可下载</string>
    <string name="weiying">jeek20140101</string>
    <string name="shoucang">收藏</string>
    <string name="fabu">发布</string>
    <string name="day_num">12</string>
    <string name="month_num">2月</string>
    <string name="hp_share_list_0">分享：营养午餐</string>
    <string name="hps_share_list_1">标签：猪肉</string>
    <string name="hps_share_list_2">口味：</string>
    <string name="hps_share_list_3">热量：</string>
    <string name="current_version">当前版本   V1.0.1</string>
    <string name="new_version">最新版本   V1.0.1</string>
    <string name="chat_name">趋势图</string>
    <string name="add_head_ima">添加头像</string>
    <string name="add_nicheng">填写昵称</string>
    <string name="add_old">填写年龄</string>
    <string name="add_niceng_example">如小雨</string>
    <string name="add_old_example">如20</string>
    <string name="sec_sex">选择性别</string>
    <string name="boy">男</string>
    <string name="gilr">女</string>
    <string name="baseifo">基本信息</string>
    <string name="recored_mood">记录你此刻心情</string>
    <string name="recorde_mood_title">记录心情</string>
    <string name="mood_num">心情指数</string>
    <string name="add_comment">填写评论</string>
    <string name="edit_comment">请输入您的评论</string>
    <string name="try_comment">评论一下</string>
    <string name="recored">记录</string>
    <string name="recoreding">记录中&#8230;</string>
    <string name="share_notice">在分享之前最好完善下您的信息</string>
    <string name="yingyangshare">营养分享</string>
    <string name="mymood">有了微营养，妈妈从此再也不会担心我的饮食健康，智能营养生活从这里开启&#8230;</string>
    <string name="getyingyang">获得五个营养币</string>
    <string name="compleinfojiangli">恭喜您获得十个营养币</string>
    <string name="scanfiure_0">扫描失败，请扫描中餐美食</string>
    <string name="scanfilure_1">你可以先点击记录，体验智能匹配服务！</string>
    <string name="save">保存</string>
    <string name="saving">保存中</string>
    <string name="tell_other">告知亲友</string>
    <string name="contacts">通讯录</string>
    <string name="start_ty">开始体验</string>
    <string name="shijizhi">实际值</string>
    <string name="jianyizhi">建议值</string>
    <string name="shuruma">请输入您的微码</string>
    <string name="useyaonotice">使用yao营养之前请先完善您的个人信息!</string>
    <string name="usersaoynotice">使用扫营养之前请先完善您的个人信息!</string>
    <string name="net_erro">您的网络出错了!</string>
    <string name="downnotice">下载提示</string>
    <string name="downmessage">是否进行下载</string>
    <string name="download">下载</string>
    <string name="send">发送</string>
    <string name="sending">发送中&#8230;</string>
    <string name="pushmsg_hint">点击输入内容</string>
    <string name="dateerro">数据错误</string>
    <string name="commding">评论中&#8230;</string>
    <string name="shayishai">晒一晒</string>
    <string name="shaiing">晒ing</string>
    <string name="publish">发布</string>
    <string name="publish_hint">说点什么吧</string>
    <string name="input_food_hint">点击按钮语音或手动输入食物成分</string>
    <string name="price">恭喜您获得五个营养币!</string>
    <string name="pleaseshai">你还可以</string>
    <string name="yingyang_xiaojingli">营养小精灵</string>
    <string name="carre">职业</string>
    <string name="heriawei">身高体重</string>
    <string name="body_state">身体状况</string>
    <string name="bodyamood">身心指数</string>
    <string name="yinshihelidu">饮食合理度</string>
    <string name="msg">消息</string>
    <string name="mymsg">我的消息</string>
    <string name="nonewmsg">没有新信息</string>
    <string name="submiting">正在提交&#8230;</string>
    <string name="nullcontentnotice">内容不能为空</string>
    <string name="zansuccess">点赞成功</string>
    <string name="zanfailure">点赞失败</string>
    <string name="collectsuccess">收藏成功</string>
    <string name="collectfailure">收藏失败</string>
    <string name="publish_sucess">发布成功</string>
    <string name="publish_faliure">发布失败</string>
    <string name="year">年前</string>
    <string name="month">月前</string>
    <string name="day">天前</string>
    <string name="hour">小时前</string>
    <string name="min">分钟前</string>
    <string name="sec">秒前</string>
    <string name="justnow">刚刚</string>
    <string name="yesterday">昨天</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="today">今天</string>
    <string name="date_format">M月d日 HH:mm</string>
    <string name="year_format">yyyy年 M月d日 HH:mm</string>
    <string name="resh">刷新</string>
    <string name="cant_insert_album">发生意外，无法写入相册</string>
    <string name="delsuccess">删除成功</string>
    <string name="delfailure">删除失败!</string>
    <string name="nomore">没有更多</string>
    <string name="mycollect">我的收藏</string>
    <string name="delcollect">取消收藏</string>
    <string name="vtamin">维生素</string>
    <string name="protein">蛋白质</string>
    <string name="minerals">矿物质</string>
    <string name="fat">脂肪</string>
    <string name="surgar">糖类</string>
    <string name="enger">热量级</string>
    <string name="fatal_s">超标</string>
    <string name="data_erro">数据异常</string>
    <string name="noresult">无匹配结果</string>
    <string name="example2yuyin">输入成分时无需加入标签符号</string>
    <string name="mooddetils">心情详情</string>
    <string name="nodata">暂无数据</string>
    <string name="input_carrer">填写职业</string>
    <string name="input_carrer_hint">请填写你的职业</string>
    <string name="modifysuccess">修改成功</string>
    <string name="modifyfailure">修改失败</string>
    <string name="input_h_hint">请填写您的身高</string>
    <string name="input_h_exmple">请填写您的身高，如170默认单位为cm</string>
    <string name="input_w_hint">请填写您的体重</string>
    <string name="input_w_example">请填写您的体重，如50默认单位为kg</string>
    <string name="input_tag_example">如高血压|低血糖|缺钙</string>
    <string name="xiekang">/</string>
    <string name="mymoodll">我的评论</string>
    <string name="bmi">BMI</string>
    <string name="weightnotice">请输入正确的体重</string>
    <string name="heightnotice">请输入正确的身高</string>
    <string name="nichengnotice">昵称不能为空</string>
    <string name="agenullnotice">年龄不能为空</string>
    <string name="agenotice">请输入正确的年龄</string>
    <string name="delall">删除全部</string>
    <string name="sao_help">*中餐营养识别效果更好 \n*请对准菜品在灯光较为明亮背景下使用该服务尽量不要包括其他非菜品成分背景  \n*本软件注重营养调理过程服务，如果您需要病况诊断，请到医院就诊问询  \n*为了给您提供优质的饮食营养健康服务，请您养成记录自己的饮食健康习惯</string>
    <string name="sao_notice">使用扫营养前，请检查您的网络是否连接</string>
    <string name="bmi_indro">BMI体质指数在“18.5≦BMI＜24”属于合理</string>
    <string name="inputtag">填写标签</string>
    <string name="input_foodtag_hint">参考标签：午餐|鸡肉|蘑菇</string>
    <string name="foodtaselev">美食口味</string>
    <string name="foodreson_hint">吃的是否合理，问问就知道&#8230;</string>
    <string name="autofousnotice">聚焦失败请重新点击扫描按钮</string>
    <string name="msglist">消息列表</string>
    <string name="send_successfully">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="send_photo">正在上传图片</string>
    <string name="renqi">人气</string>
    <string name="parseerror">解析出错</string>
    <string name="maplist">地图列表</string>
    <string name="search">搜索</string>
    <string name="health_recoder">健康记录</string>
    <string name="my_ice_box">我的冰箱</string>
    <string name="msg_box">消息盒子</string>
    <string name="title_activity_scan_success">ScanSuccess</string>
    <string name="myhonor">我的荣誉</string>
    <string name="weimaid">微码ID</string>
    <string name="body_bmi">身体体质</string>
    <string name="remarks">备注说明</string>
    <string name="title_activity_food_details">美食详情</string>
    <string name="share">分享</string>
    <string name="commentinfo">评价详情</string>
    <string name="healthzs">营养预警</string>
    <string name="comment">评价 </string>
    <string name="action_bar_search">搜索</string>
</resources>