<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fatal_s"
            android:textColor="#ffffff"
            android:textSize="12sp" 
            android:visibility="invisible"/>
        
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/vitaminsimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/point0" />

            <ImageView
                android:id="@+id/jianyi_vitaminsimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/point0" />
        </LinearLayout>

        <TextView
            android:id="@+id/vitaminsimgtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/vtamin"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"  >

        <TextView
            android:id="@+id/chaobiao_proteins_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fatal_s"
            android:textColor="@color/red"
            android:visibility="invisible"
            android:textSize="12sp" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/proteinsimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/point0" />

            <ImageView
                android:id="@+id/jianyi_proteinsimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/point0" />
        </LinearLayout>

         <TextView
             android:id="@+id/proteinstext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/protein"
             android:textColor="#ffffff"
             android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fatal_s"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:visibility="invisible" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

             <ImageView
            android:id="@+id/mineralsimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/point0" />
        
        <ImageView
            android:id="@+id/jianyi_mineralsimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/point0" />
        </LinearLayout>

          <TextView
              android:id="@+id/mineralstext"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:text="@string/minerals"
              android:textColor="#ffffff"
              android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"  >

        <TextView
            android:id="@+id/chaobiao_fat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fatal_s"
            android:textColor="@color/red"
             android:visibility="invisible"
            android:textSize="12sp" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

           <ImageView
            android:id="@+id/fatimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/point0" />
        
        <ImageView
            android:id="@+id/jianyi_fatimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/point0" />
        </LinearLayout>

        <TextView
            android:id="@+id/fat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fat"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:layout_weight="1" >
        
        <TextView
            android:id="@+id/chaobiao_sugar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fatal_s"
            android:textColor="@color/red"
             android:visibility="invisible"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

              <ImageView
            android:id="@+id/sugarimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/point0" />
        
        <ImageView
            android:id="@+id/jianyi_sugarimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/point0" />
        </LinearLayout>

         <TextView
             android:id="@+id/sugar_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/surgar"
             android:textColor="#ffffff"
             android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"  >

        <TextView
            android:id="@+id/chaobiao_energy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fatal_s"
            android:textColor="@color/red"
             android:visibility="invisible"
            android:textSize="12sp" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

           <ImageView
            android:id="@+id/sao_energyimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/point0" />
        
        <ImageView
            android:id="@+id/jianyi_sao_energyimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/point0" />
        </LinearLayout>

        <TextView
            android:id="@+id/engrey_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enger"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>